# CapstoneSpring2023

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  lwipopts.h
include/udpBeacon/: CMakeLists.txt  cmake_install.cmake  udpBeacon.c  udpBeacon.h
src/: CMakeLists.txt  main.cpp
test/: test.cpp
